--- a/WebAppForAPITest/buildspec.yml
+++ b/WebAppForAPITest/buildspec.yml
@@ -3,20 +3,26 @@ version: 0.2
 phases:   
   install:
     runtime-versions:
-      dotnet: 8.0      
+      dotnet: 8.0
+      
   pre_build:
     commands:
       - echo "Restoring dependencies...`date`"
-      - dotnet restore      
+      - dotnet restore
+      
   build:
     commands:
       - echo "Build started on `date`"
-      - dotnet build WebAppForAPITest/SwapnapurtiWebsite.csproj          
+      - dotnet build WebAppForAPITest/ --configuration Release --no-restore
+     
+      
   post_build:
     commands:
       - echo "Publish started on `date`"
-      - dotnet publish -r linux-x64 WebAppForAPITest/SwapnapurtiWebsite.csproj
+      - dotnet publish WebAppForAPITest/ --configuration Release --output ./      
+
 artifacts:
   files:
-    - WebAppForAPITest//bin/Debug/net8.0/linux-x64/publish/**/*
-  discard-paths: yes
+    - '.WebAppForAPITest/**/*'
+  base-directory: './'
+  discard-paths: no
