--- a/WebAppForAPITest/buildspec.yml
+++ b/WebAppForAPITest/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - dotnet build WebAppForAPITest/SwapnapurtiWebsite.csproj
   post_build:
     commands:
-      - dotnet publish -r linux-x64 SwapnapurtiWebsite.csproj
+      - dotnet publish -r linux-x64 WebAppForAPITest/SwapnapurtiWebsite.csproj
 artifacts:  
   files:
-    - src/bin/Debug/net8.0/linux-x64/publish/**/*
+    - WebAppForAPITest/bin/Debug/net8.0/linux-x64/publish/**/*
   discard-paths: yes
