--- a/WebAppForAPITest/buildspec.yml
+++ b/WebAppForAPITest/buildspec.yml
@@ -11,5 +11,5 @@ phases:
       - dotnet publish -r linux-x64 WebAppForAPITest/SwapnapurtiWebsite.csproj
 artifacts:  
   files:
-    - WebAppForAPITest/bin/Debug/net8.0/linux-x64/publish/**/*
+    - WebAppForAPITest/bin/Debug/net8.0/**/*
   discard-paths: yes
